--- a/styles.css
+++ b/styles.css
@@ -155,7 +155,8 @@ section {
     flex-direction: column;
     gap: var(--gap-extra-small);
     overflow: hidden;
-    height: 100vh;
+    height: calc(100vh - var(--gap-big) * 2);
+    top: var(--gap-big);
     aspect-ratio: 16/9;
     max-width: 100%;
 }
